# Dify-like

./: .env.example  .gitignore  README.md  docker-compose.yml  restart-backend.cmd  restart-backend.ps1
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: dependencies.py
backend/app/api/routes/: apps.py  (+14 more)
backend/app/core/: config.py  credential_crypto.py
backend/app/db/: models.py  session.py
backend/app/mcp/: client.py  protocol.py  server_runtime.py
backend/app/runtime/: agent_adapters.py  workflow_executor.py
backend/app/services/: agent_tool_spec.py  app_service.py  auth_service.py  chat_service.py  external_mcp_oauth_service.py  external_mcp_server_service.py  knowledge_database_service.py  model_credential_service.py  platform_assistant_service.py  platform_skill_search_service.py  platform_skill_service.py  qdrant_service.py  rag_providers.py  rag_service.py  retrieval_defaults.py  retrieval_providers.py  retrieval_service.py  run_log_service.py  skill_loader_service.py  sparse_bm25.py  workflow_mcp_server_service.py  workflow_service.py
backend/app/tools/: mcp_runtime_adapter.py  registry.py
backend/app/worker/: celery_app.py
backend/dify_like_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 202606020001_initial_real_workflows.py  202606030001_drop_app_tools.py  202606030002_mcp_integration.py  202606110001_external_mcp_http_compat.py  202606110002_external_mcp_oauth2.py  202606120001_platform_skills.py  202606140001_platform_assistant_sessions.py  (+1 more)
(+12 files in other folders)
