[project]
name = "dify-like-backend"
version = "0.1.0"
description = "FastAPI backend for a Dify-like AgentScope demo"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1.0",
  "cryptography>=46.0.0",
]

[project.optional-dependencies]
agentscope = [
  "agentscope[full]==1.0.19.post1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
